@startuml
class Leverancier {
  +id: int
  +Naam: string
  +ContactPersoon: string
  +LeverancierNummer: string
  +Mobiel: string
  +ContactId: int
}

class Contact {
  +id: int
  +Straat: string
  +Huisnummer: int
  +Postcode: string
  +Stad: string
}

class Product {
  +id: int
  +Naam: string
  +Barcode: string
}

class Magazijn {
  +id: int
  +ProductId: int
  +VerpakkingsEenheid: decimal
  +AantalAanwezig: int
}

class Allergeen {
  +id: int
  +Naam: string
  +Omschrijving: string
}

class ProductPerAllergeen {
  +id: int
  +ProductId: int
  +AllergeenId: int
}

class ProductPerLeverancier {
  +id: int
  +LeverancierId: int
  +ProductId: int
  +DatumLevering: date
  +Aantal: int
  +DatumEerstVolgendeLevering: date
}

Leverancier "1" o-- "1" Contact
ProductPerLeverancier "*" --> "1" Leverancier
ProductPerLeverancier "*" --> "1" Product
Magazijn "1" --> "1" Product
ProductPerAllergeen "*" --> "1" Product
ProductPerAllergeen "*" --> "1" Allergeen
@enduml
